--- a/Automation/Automation.App/Views/WorkPages/Tasks/Components/TasksSelector.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/Components/TasksSelector.xaml
@@ -60,7 +60,7 @@
             </ItemsControl.ItemTemplate>
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <WrapPanel IsItemsHost="True" />
+                    <WrapPanel MaxWidth="{Binding ActualWidth, ElementName=ContainerElement}" IsItemsHost="True" />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
         </ItemsControl>
