--- a/Automation/Automation.App/Views/WorkPages/Tasks/TaskPage.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/TaskPage.xaml
@@ -39,7 +39,7 @@
                         </StackPanel>
                     </TabItem.Header>
 
-                    <components:SchemaEdit Task="{Binding Task}" IsReadOnly="True" />
+                    <components:SchemaEdit Task="{Binding Task}" />
                 </TabItem>
             </TabControl>
 
