--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/GraphEditor.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/GraphEditor.xaml
@@ -76,7 +76,7 @@
                 <nodify:NodifyEditor.InputBindings>
                     <KeyBinding
                         Key="Delete"
-                        Command="{Binding Actions.Nodes.RemoveCommand}"
+                        Command="{Binding Nodes.RemoveCommand}"
                         CommandParameter="{Binding SelectedNodes}" />
                 </nodify:NodifyEditor.InputBindings>
                 <nodify:NodifyEditor.Resources>
@@ -88,7 +88,14 @@
                     </DataTemplate>
 
                     <DataTemplate DataType="{x:Type models:GraphTask}">
-                        <local:GraphEditorNode Task="{Binding}" />
+                        <local:GraphEditorNode Task="{Binding}">
+                            <local:GraphEditorNode.InputBindings>
+                                <MouseBinding
+                                    Gesture="LeftDoubleClick"
+                                    CommandParameter="{Binding}"
+                                    Command="{Binding Editor.Nodes.OpenCommand, RelativeSource={RelativeSource AncestorType={x:Type local:GraphEditor}}}" />
+                            </local:GraphEditorNode.InputBindings>
+                        </local:GraphEditorNode>
                     </DataTemplate>
                 </nodify:NodifyEditor.Resources>
                 <nodify:NodifyEditor.ItemContainerStyle>
