--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/WorkflowSchemaModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/WorkflowSchemaModal.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkPages.Workflows.Editor.Components.TaskInputSetting"
+    x:Class="Automation.App.Views.WorkPages.Workflows.Editor.Components.WorkflowSchemaModal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -22,8 +22,9 @@
             AcceptsTab="True"
             FontFamily="Courier New"
             IsReadOnly="True"
-            Text="{Binding Task.InputJson, Mode=TwoWay}"
-            TextWrapping="Wrap" />
+            Text="{Binding WorkflowSchemaSample, Mode=TwoWay}"
+            TextWrapping="Wrap"
+            TextChanged="TextBox_TextChanged"/>
 
         <StackPanel
             Orientation="Horizontal"
