Fix BaseGraphTask display

--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/WorkflowSchemaModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/WorkflowSchemaModal.xaml
@@ -21,10 +21,9 @@
             AcceptsReturn="True"
             AcceptsTab="True"
             FontFamily="Courier New"
-            IsReadOnly="True"
-            Text="{Binding WorkflowSchemaSample, Mode=TwoWay}"
+            Text="{Binding WorkflowSchemaSample, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             TextWrapping="Wrap"
-            TextChanged="TextBox_TextChanged"/>
+            TextChanged="TextBox_TextChanged" />
 
         <StackPanel
             Orientation="Horizontal"
