Fix public private method change

--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/TaskInputSettingModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/TaskInputSettingModal.xaml
@@ -44,7 +44,7 @@
 
                 <ItemsControl
                     Grid.Row="1"
-                    ItemsSource="{Binding InputsSamplesJson}"
+                    ItemsSource="{Binding ContextSamplesJson}"
                     Margin="0,4,0,0">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
