--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/WorkflowInputModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/WorkflowInputModal.xaml
@@ -1,36 +1,23 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkPages.Workflows.Editor.Components.TaskInputSettingModal"
+    x:Class="Automation.App.Views.WorkPages.Workflows.Editor.Components.WorkflowInputModal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     mc:Ignorable="d"
-    MinHeight="500"
+    MinHeight="600"
     MinWidth="600"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Workflows.Editor.Components"
     x:Name="ContainerElement">
-    <UserControl.Resources>
-        <Style
-            x:Key="CodeTextBox"
-            TargetType="TextBox"
-            BasedOn="{StaticResource {x:Type TextBox}}">
-            <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
-            <Setter Property="VerticalContentAlignment" Value="Top" />
-            <Setter Property="AcceptsReturn" Value="True" />
-            <Setter Property="AcceptsTab" Value="True" />
-            <Setter Property="FontFamily" Value="Consolas" />
-            <Setter Property="TextWrapping" Value="Wrap" />
-        </Style>
-    </UserControl.Resources>
     <Grid DataContext="{Binding ElementName=ContainerElement}" Margin="2">
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <local:ContextMapping />
-        
+        <local:ContextMapping  SchemaJson="{Binding Workflow.InputSchemaJson}" SettingsJson="{Binding InputSampleJson}" />
+
         <StackPanel
             Orientation="Horizontal"
             Grid.Row="1"
