Update settings for start, end and common task

--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/ContextMapping.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/ContextMapping.xaml
@@ -109,7 +109,7 @@
                     Grid.Row="1"
                     Style="{StaticResource CodeTextBox}"
                     Text="{Binding SchemaJson, Mode=TwoWay}"
-                    IsReadOnly="{Binding IsSchemaReadOnly}" />
+                    IsReadOnly="True" />
             </Grid>
         </Grid>
     </Grid>
