--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/TaskInputSettingModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/Components/TaskInputSettingModal.xaml
@@ -16,6 +16,7 @@
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
         <local:ContextMapping x:Name="ContextMappingElement" Inputs="{Binding ContextSamples}"
@@ -23,9 +24,11 @@
                               SettingsJson="{Binding Task.InputJson, Mode=TwoWay}"
                               DoesSettingUpdateSchema="False"/>
 
+        <CheckBox Grid.Row="1" IsChecked="{Binding Task.Settings.WaitAll, Mode=TwoWay}" Checked="HandleWaitAllChanged" Unchecked="HandleWaitAllChanged">Wait for all inputs</CheckBox>
+        
         <StackPanel
             Orientation="Horizontal"
-            Grid.Row="1"
+            Grid.Row="2"
             HorizontalAlignment="Right"
             Margin="0,2,0,0">
             <Button Margin="2,0" Command="{Binding CancelCommand}">
